--- a/src/main/resources/fxml/PlayerView.fxml
+++ b/src/main/resources/fxml/PlayerView.fxml
@@ -6,29 +6,40 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane fx:id="view" dividerPositions="0.4" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane fx:id="view" dividerPositions="0.45" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/player.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <items>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <center>
-            <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
                <children>
                   <Label text="Chat:" />
                   <TextArea fx:id="textoArea" editable="false" wrapText="true" VBox.vgrow="ALWAYS" />
                </children>
                <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </VBox>
          </center>
          <bottom>
-            <HBox spacing="5.0" BorderPane.alignment="CENTER">
+            <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
                <children>
                   <TextField fx:id="textoField" />
-                  <Button fx:id="enviarButton" defaultButton="true" mnemonicParsing="false" onAction="#onEnviarAction" prefWidth="80.0" text="Enviar" HBox.hgrow="SOMETIMES" />
+                  <Button fx:id="enviarButton" defaultButton="true" mnemonicParsing="false" onAction="#onEnviarAction" prefWidth="60.0" text="Enviar" HBox.hgrow="SOMETIMES" />
+                  <Button fx:id="emojiButton" mnemonicParsing="false" onAction="#onEmojiAction">
+                     <graphic>
+                        <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/emoji.jpg" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -45,9 +56,9 @@
             </Button>
          </bottom>
          <center>
-            <VBox BorderPane.alignment="CENTER">
+            <VBox alignment="CENTER" BorderPane.alignment="CENTER">
                <BorderPane.margin>
-                  <Insets bottom="5.0" left="15.0" right="15.0" top="15.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </BorderPane.margin>
                <children>
                   <Label text="Minas:" />
